Closed Bug 1137175 Opened 9 years ago Closed 9 years ago

tighten up public interface of MiscContainer

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla39
Tracking Status
firefox39 --- fixed

People

(Reporter: froydnj, Assigned: froydnj)

Details

Attachments

(1 file)

MiscContainer declares that it HasDangerousPublicDestructor.  This
declaration is accurate, but unnecessary, as MiscContainer doesn't use
any of the nsISupports machinery that checks
HasDangerousPublicDestructor.  So HasDangerousPublicDestructor is a nice
bit of documentation, but completely unused; let's remove it.

MiscContainer having a public destructor is a bit of a footgun, though.
Let's protect MiscContainer's destructor and make nsAttrValue a friend
class, since nsAttrValue is what controls the lifetime of MiscContainer
objects.
Just a little cleanup.
Attachment #8569840 - Flags: review?(khuey)
Comment on attachment 8569840 [details] [diff] [review]
tighten up public interface of MiscContainer

Review of attachment 8569840 [details] [diff] [review]:
-----------------------------------------------------------------

lovely
Attachment #8569840 - Flags: review?(khuey) → review+
https://hg.mozilla.org/mozilla-central/rev/26c29e931f79
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla39
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: