Bug 1137175 - tighten up public interface of MiscContainer; r=khuey

MiscContainer declares that it HasDangerousPublicDestructor.  This
declaration is accurate, but unnecessary, as MiscContainer doesn't use
any of the nsISupports machinery that checks
HasDangerousPublicDestructor.  So HasDangerousPublicDestructor is a nice
bit of documentation, but completely unused; let's remove it.

MiscContainer having a public destructor is a bit of a footgun, though.
Let's protect MiscContainer's destructor and make nsAttrValue a friend
class, since nsAttrValue is what controls the lifetime of MiscContainer
objects.